Use out sourced generic vert.x part

--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -1,16 +1,13 @@
 # Pull base image.
-FROM dockerfile/java
+FROM ascheman/vert.x:latest
 
 MAINTAINER Gerd Aschemann <gerd@aschemann.net>
 
-ADD vert.x-2.1.5 /vertx
 # Add app
 RUN mkdir -p /app
 COPY tictactoe-server.js /app/
 
 WORKDIR /app
-
-ENV PATH :/vertx/bin:$PATH:
 
 # Run
 CMD ["vertx", "run", "tictactoe-server.js", "-cluster"]
